# omnisette

./: .gitignore  Cargo.toml  README.md
icloud-auth/: Cargo.toml
omnisette/: Cargo.toml
omnisette/src/: aos_kit.rs  lib.rs
